--- a/index-architecture.html
+++ b/index-architecture.html
@@ -583,7 +583,7 @@
 													data-animate-in="opacity:0;transX:50px;duration:600ms;delay:200ms;easing:easeFastSlow;"
 													data-no-scale
 												>
-													Accredited Architectural Firm
+													Open Banking by SEB
 												</p>
 											</div>
 										</div>
