--- a/index-architecture.html
+++ b/index-architecture.html
@@ -576,7 +576,7 @@
 													data-animate-in="opacity:0;transX:50px;duration:600ms;easing:easeFastSlow;"
 													data-no-scale
 												>
-													<strong>Open</strong>/Banking
+													<strong>Disrupt</strong>/Now
 												</h1>
 												<div class="clear"></div>
 												<p class="tms-caption lead color-white lspacing-medium"
