--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 						<div>The introduction of open APIs to enable third party payment authorisationand to share a bank customer’s account details and transaction history offer an innovation opportunity for banks that want to become more customer-centric. Open APIs offer banks an opportunity to build an ecosystem of partnerships that will better serve them to deliver on their core mission: protecting nances and helping customers build wealth.</div>
 <br>					
 <div>The Second Payment Services Directive (PSD2) offers banks a way to avoid disruption and takeup the technology opportunities of today. Today, all industries are becoming technology industries, where a bulk of the services and products they offer must be supplied or managed digitally. This new industrial model is creating a platform economy, where everyone is empowered to create theirown digital value chains unique to their needs and experiences.</div>
+<br>					
+<div>Open Banking will be in the center of the Industrial Revolution 4.0.</div>
 					</div>
 				</section>
 
