--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
 		<meta itemprop="description" content="The introduction of open APIs to enable third party payment authorisationand to share a bank customer’s account details and transaction history offer an innovation opportunity for banks that want to become more customer-centric. Open APIs offer banks an opportunity to build an ecosystem of partnerships that will better serve them to deliver on their core mission: protecting nances and helping customers build wealth.">
 		<meta itemprop="image" content="https://openbank.se/img/Fb_Preview.png">
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-77191710-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 
 
