--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!--<script src="particles.js"></script>-->
 		<link rel="shortcut icon" href="img/favicon.ico">
 		<!-- METATAGS & SEO -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
 		<meta charset="utf-8" />
 		<meta name=”description” content=”The world is changing | Open Banking”/>
 		<title>The world is changing | Open Banking</title>
