--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
 				<section id="contact">
 					<div class="shortColumn info">
 						<h4>get in touch</h4>
-						<a href="mailto:@gmail.com" class="loopCol email" data-hover="email">@openbank.se<span class="coloredHover">@openbank.se</span></a>
-						<div>We are physically located at the Epicenter Stockholm.<br>
-						Malmskillnadsgatan 32<br>
-						111 52 Stockholm<br>
+						<a href="mailto:@openbank.se" class="loopCol email" data-hover="email">@openbank.se<span class="coloredHover">@openbank.se</span></a>
+						<div>We are physically located right in the Epicenter of Innovation<br>
+						Stockholm<br>
 						Sweden
 						</div>
 					</div>
