--- a/index.html
+++ b/index.html
@@ -44,11 +44,32 @@
   ga('send', 'pageview');
 
 </script>
+<SCRIPT>
+function passWord() {
+var testV = 1;
+var pass1 = prompt('Enter Your Password',' ');
+while (testV < 3) {
+if (!pass1) 
+history.go(-1);
+if (pass1.toLowerCase() == "guest") {
+alert('Password Correct');
+window.open("index2.html");
+break;
+} 
+testV+=1;
+var pass1 = 
+prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
+}
+if (pass1.toLowerCase()!="password" & testV ==3) 
+history.go(-1);
+return " ";
+} 
+</SCRIPT>
 
 
 
 	</head>
-	<body class="noTransition">
+	<body class="noTransition" onLoad="passWord()">
 		<!--<div id="particles-js"></div>-->
 		<main>
 		<div class="container">
