--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 function passWord() {
 var testV = 1;
 var pass1 = prompt('Enter Your Password',' ');
-while (testV < 3) {
+while (testV < 99) {
 if (!pass1) 
 history.go(-1);
 if (pass1.toLowerCase() == "guest") {
 alert('Password Correct');
-window.open("index2.html");
+window.open("index.html");
 break;
 } 
 testV+=1;
 var pass1 = 
 prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
 }
-if (pass1.toLowerCase()!="password" & testV ==3) 
+if (pass1.toLowerCase()!="password" & testV ==99) 
 history.go(-1);
 return " ";
 } 
